cmake_minimum_required(VERSION 4.2)
project(study C)

set(CMAKE_C_STANDARD 11)

add_executable(study 8-3-1.c
        8-3-2.c
        8-3-3.c
        8-3-4.c
        8-3-5.c
        8-3-6.c
        8-3-7.c
        8-3-8.c
        8-4-9.c
        8-4-10.c
        8-4-11.c
        8-4-12.c
        8-4-13.c
        8-4-14.c
        9-1-1.c
        9-2-2.c
        9-2-3.c
        9-2-4.c
        9-2-5.c
        9-2-6.c
        9-4-7.c
        9-4-8.c
        9-4-9.c
        9-4-10.c
        9-4-11.c
        9-4-12.c
        9-4-13.c
        9-4-14.c
        9-4-15.c
        9-p-1.c
        9-a-1-1.c
        9-a-1-2.c
        9-a-2-1.c
        9-a-2-2.c)
